--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="windows-1252">
         <title>Calendario</title>
+        <script src="main.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         
